# real_estate_ai_search

./: .env.example  .gitignore  10.md  ADVANCED_EMBEDDINGS.md  ADVANCED_NEO4J.md  ADVANCED_QUERIES_REFACTORING_PROPOSAL.md  AGGREGATION_REFACTOR.md  ARCHITECTURE_INDEPENDENCE.md  ARCHITECTURE_IN_DEPTH.md  BEST_WORKING_QUERIES.md  CHANGES_SUMMARY.md  CLAUDE.md  CLEAN.md  CLEAN9.md  CLEANUP.md  CLEANUP_GEO.md  CLEAN_DEMO_RESULT.md  CLEAN_RESULTS.md  CLEAN_RICH.md  CLEAN_UP.md  CLEAN_WIKI.md  COMMON_EMBEDDINGS.md  COMMON_EMBED_PLAN.md  COMMON_INGEST.md  COMMON_INGEST_API_PLAN.md  COMMON_INGEST_PLAN.md  COMMON_MODEL.md  COMMON_MODEL_EMBEDDINGS.md  COMMON_MODEL_INGEST.md  COMPLETE.md  COMPREHENSIVE_REVIEW.md  CONFIGURATION_REVIEW_REPORT.md  CORRELATION.md  CRITICAL_FIXES_REQUIRED.md  DEDUP.md  DEDUP_DEMOS_11_15.md  DEEP_ANALYSIS_AND_CODE_REVIEW.md  DEEP_CLEANUP_ANALYSIS.md  DEMOS.md  DEMO_9_VS_11_ANALYSIS.md  (+192 more)
common/: README.md  pyproject.toml  run_tests.py
common/api_client/: README.md  __init__.py  base.py  client_factory.py  config.py  config_loader.py  exceptions.py  models.py  property_client.py  property_models.py  stats_client.py  stats_models.py  system_client.py  wikipedia_client.py  wikipedia_models.py
common/property_finder_models/: __init__.py  config.py  core.py  entities.py  geographic.py
common/tests/: test_models.py
common_embeddings/: .env.sample  ARCHITECTURE.md  EMBEDDING_OVERVIEW.md  EVAL_EMBEDDINGS.md  README.md  __init__.py  __main__.py  config.yaml  eval.config.yaml  main.py  pipeline.py  pyproject.toml  run_eval_comparison.py  test.config.example.yaml  test.config.yaml  test_bronze.config.yaml  test_pipeline.py
common_embeddings/correlation/: __init__.py  correlation_manager.py  enrichment_engine.py  models.py
common_embeddings/embedding/: __init__.py  factory.py
common_embeddings/evaluate/: __init__.py  __main__.py  article_selector.py  compare_models.py  create_gold_standard.py  data_processor.py  evaluation_runner.py  metrics_calculator.py  model_comparator.py  query_generator.py  query_generator_old.py  relevance_grader.py  report_generator.py  run_comparison.py  run_evaluation.py  test_config.py  validate_queries.py
common_embeddings/evaluate_data/: bronze_articles.json  bronze_queries.json  evaluate_articles.json  evaluate_queries.json  gold_articles.json  gold_queries.json
common_embeddings/evaluate_results/: VALIDATION_SUMMARY.md  detailed_results.json  evaluation_report.html  evaluation_report.txt  metrics_summary.json  validation_report.json
common_embeddings/examples/: llamaindex_demo.py
common_embeddings/integration_tests/: INTEGRATION_TESTS_PROPOSAL.md  __init__.py  fixed_test_articles.json  fixed_test_queries.json  models.py  test_fixed_data.py
common_embeddings/loaders/: __init__.py  optimized_loader.py  real_estate_loader.py  wikipedia_loader.py
common_embeddings/models/: __init__.py  base.py  config.py  correlation.py  entities.py  enums.py  eval_config.py  exceptions.py  geographic.py  interfaces.py  metadata.py  processing.py  statistics.py
common_embeddings/processing/: __init__.py  batch_processor.py  chunking.py  llamaindex_pipeline.py  node_processor.py
common_embeddings/sample_eval_configs/: README.md  eval.config.yaml  eval_bronze.yaml  eval_bronze_mxbai.yaml  eval_bronze_voyage.yaml  eval_mxbai.yaml  mxbai.yaml  nomic.yaml  test_bronze_voyage.config.yaml  voyage.yaml
common_embeddings/services/: __init__.py  batch_storage.py  collection_manager.py  metadata_factory.py
common_embeddings/storage/: __init__.py  chromadb_store.py  enhanced_chromadb.py  query_manager.py
common_embeddings/tests/: test_integration.py
common_embeddings/utils/: __init__.py  correlation.py  hashing.py  logging.py  progress.py  validation.py
common_ingest/: FIX_API.md  INTEGRATION_TESTS_SUMMARY.md  README.md  SERVICE_LAYER_PLAN.md  __init__.py  __main__.py  api_main.py  config.yaml  pyproject.toml  pytest.ini  requirements.txt  run_correlation_tests.sh  run_tests.sh  start_api.sh  stop_api.sh
common_ingest/api/: __init__.py  app.py  dependencies.py  middleware.py
common_ingest/enrichers/: __init__.py  address_utils.py  feature_utils.py
common_ingest/integration_tests/: __init__.py  conftest.py  test_api_comprehensive.py  test_correlation_bronze.py  test_health_endpoints.py  test_neighborhood_endpoints.py  test_property_endpoints.py  test_wikipedia_endpoints.py
common_ingest/loaders/: __init__.py  base.py  neighborhood_loader.py  property_loader.py  wikipedia_loader.py
common_ingest/models/: __init__.py  base.py  embedding.py  neighborhood.py  property.py  wikipedia.py
common_ingest/services/: __init__.py  correlation_service.py  embedding_service.py  neighborhood_service.py  property_service.py  wikipedia_service.py
common_ingest/tests/: __init__.py  test_enrichers.py  test_loaders.py  test_models.py
common_ingest/utils/: __init__.py  config.py  logger.py
data_pipeline/: NEO4J_SETUP.md  README.md  __init__.py  __main__.py  config.yaml  elasticsearch_requirements.txt  graph_models.py  main.py  neo4j.config.yaml  pyproject.toml
data_pipeline/config/: constants.py  entity_configs.py  field_mappings.json  loader.py  models.py  models_backup.py  pipeline_config.py  pipeline_config.yaml  resolver.py  settings.py
data_pipeline/configs/: elasticsearch_config.yaml  main_config.yaml  neo4j_config.yaml
data_pipeline/core/: exceptions.py  pipeline_fork.py  pipeline_runner.py  spark_session.py
data_pipeline/docs/: spark_native_approach.md
data_pipeline/embedding/: __init__.py  factory.py
data_pipeline/enrichment/: __init__.py  base_enricher.py  base_extractor.py  county_extractor.py  entity_extractors.py  extractor_config.py  feature_extractor.py  (+10 more)
graph-real-estate/: .env.sample  DI_MAIN.md  FIX_V5.md  HYBRID_SEARCH.md  NEO4J_OVERVIEW.md  QUERY_GUIDE.md  README.md  __init__.py  __main__.py  config.yaml  create_embeddings.py  docker-compose.yml  main.py  main.py.bak  main_old.py  pyproject.toml  query_runner.py  requirements.txt  search_properties.py  test_phase1.py  test_phase2.py  test_phase3.py  verify_graph.py
(+1161 files in other folders)
