[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["data_pipeline"]

[project]
name = "data-pipeline"
version = "1.0.0"
description = "Unified Apache Spark data pipeline for real estate and Wikipedia data processing"
requires-python = ">=3.9"
dependencies = [
    # Shared models package (local) - use relative path
    "common @ file:///Users/ryanknight/projects/temporal/real_estate_ai_search/common",
    
    # Core dependencies
    "pyspark>=3.5.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",  # For Parquet support
    
    # Utilities
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    
    # Embedding providers (llama-index)
    "llama-index-core>=0.10.0",
    "llama-index-embeddings-ollama>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-embeddings-voyageai>=0.1.0",
    "llama-index-embeddings-google>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "mypy>=1.7.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.31.0",
]

viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=data_pipeline --cov-report=term-missing --cov-report=html"